fix: Changed comment format to indicate slide start.

--- a/SLIDES.adoc
+++ b/SLIDES.adoc
@@ -48,10 +48,9 @@ presentation's titles
 . Neutrons
 ----
 
-
-//
-// Slide 2 : How to create a 
-//
+//----------------------------------------------------------------------//
+//- Slide 2 : How to create                                            -//
+//----------------------------------------------------------------------//
 == Hello
 
 [mermaid,abcd-flowchart,svg]
@@ -65,9 +64,9 @@ C -->|Two| E[Result 2]
 
 
 
-//
-// Slide 3:
-//
+//----------------------------------------------------------------------//
+//- Slide 3:                                                           -//
+//----------------------------------------------------------------------//
 == graph
 
 [graphviz]
@@ -83,9 +82,9 @@ digraph foo {
 ....
 
 
-//
-// Slide 3: Quote Albert to make point.
-//
+//----------------------------------------------------------------------//
+//- Slide 4: Quote Albert to make point.                               -//
+//----------------------------------------------------------------------//
 == Quotes
 
 [quote, Albert Einstein]
